VP-487: hearing sitting filter change to accomodate multi day hearing